Setting up the final parts